samples/_failures_safe/1761322287_816538_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_615e6b0d.c: In function ‘main’:
./samples/SAFE/__tmp_615e6b0d.c:132:5: error: expected expression at end of input
  132 |     if (
      |     ^~
./samples/SAFE/__tmp_615e6b0d.c:132:5: error: expected declaration or statement at end of input
